// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`draw should draw a house on the canvas using the default scaleX and scaleY 1`] = `
Array [
  Object {
    "props": Object {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 1,
      "f": 1,
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "setTransform",
  },
  Object {
    "props": Object {
      "value": "#808080",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fillStyle",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "value": "#ffffff",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fillStyle",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "value": 2,
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "lineWidth",
  },
  Object {
    "props": Object {
      "value": "#ffff00",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "strokeStyle",
  },
  Object {
    "props": Object {
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "stroke",
  },
  Object {
    "props": Object {
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "stroke",
  },
  Object {
    "props": Object {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "resetTransform",
  },
]
`;

exports[`draw should draw a house on the canvas using the main ctx 1`] = `
Array [
  Object {
    "props": Object {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 1,
      "f": 1,
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "setTransform",
  },
  Object {
    "props": Object {
      "value": "#808080",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fillStyle",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "value": "#ffffff",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fillStyle",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "value": 2,
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "lineWidth",
  },
  Object {
    "props": Object {
      "value": "#ffff00",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "strokeStyle",
  },
  Object {
    "props": Object {
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "stroke",
  },
  Object {
    "props": Object {
      "path": Array [],
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      1,
      1,
    ],
    "type": "stroke",
  },
  Object {
    "props": Object {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "resetTransform",
  },
]
`;

exports[`draw should draw a house with given position, scaleX and scaleY 1`] = `
Array [
  Object {
    "props": Object {
      "a": 1,
      "b": 10,
      "c": 10,
      "d": 1,
      "e": 0.5,
      "f": 0,
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "setTransform",
  },
  Object {
    "props": Object {
      "value": "#808080",
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "fillStyle",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "value": "#ffffff",
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "fillStyle",
  },
  Object {
    "props": Object {
      "fillRule": "nonzero",
      "path": Array [],
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "fill",
  },
  Object {
    "props": Object {
      "value": 2,
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "lineWidth",
  },
  Object {
    "props": Object {
      "value": "#ffff00",
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "strokeStyle",
  },
  Object {
    "props": Object {
      "path": Array [],
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "stroke",
  },
  Object {
    "props": Object {
      "path": Array [],
    },
    "transform": Array [
      1,
      10,
      10,
      1,
      0.5,
      0,
    ],
    "type": "stroke",
  },
  Object {
    "props": Object {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "resetTransform",
  },
]
`;
